light and dark mode fix attempt

--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,7 @@
 
     .section-title {
         border-bottom: 10px solid gold;
-
+        border-top: 10px solid gold;
     }
 
     .btns {
